# development-tools

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  README.md
.devcontainer/: docker-compose.yml
.devcontainer/ian/: Dockerfile  devcontainer.json
cmake/: Include.cmake
cmake/FindModules/: FindGCov.cmake  FindGCovr.cmake
cmake/IncludeModules/: Coverage.cmake
docs/: statistics_test_mull_no-diff-filter.txt  statistics_test_no-diff-filter.txt
docs/statistics_coverage_report/: coverage_report.xml
examples/: CMakeLists.txt  HelloParallelStatistics.cpp  HelloStatistics.cpp  ParallelStatistics.hpp
src/: CMakeLists.txt
src/headers/stats/: StatisticsCalculator.hpp  StatisticsReport.hpp  StatisticsUtilities.hpp
src/lib/: StatisticsAccumulator.cpp  StatisticsCalculator.cpp  StatisticsReport.cpp  StatisticsReportsHelpers.cpp  StatisticsReportsHelpers.hpp  StatisticsUtilities.cpp
tst/: CMakeLists.txt  StatisticsCalculatorTest.cpp  StatisticsExtremeStressTest.cpp  StatisticsReportTest.cpp  StatisticsReportsHelpersTest.cpp  StatisticsStressTest.cpp  StatisticsUtilitiesTest.cpp
tst/test_data/: DocumentedTestSet.hpp  StressData.cpp  StressData.hpp
